# ai-brain-uk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  GETTING_STARTED.md  GETTING_STARTED_IRISH.md  GETTING_STARTED_SCOTTISH_GAELIC.md  GETTING_STARTED_WELSH.md  KNOWLEDGE_PROVENANCE.md  MAC_INSTALL.md  MODEL_SETUP.md  NO_PII_NO_DATA.md  README.md  ROUTING_CONTRACT.md  SCOPE.md  SECURITY.md  TRANSLATION_HELP_WANTED.md  WINDOWS_INSTALL.md  config.toml.template  pyproject.toml  requirements.txt  setup.sh
_drafting_data/: 00_DRAFTING_INDEX.md  10-contract-template-sale-of-goods.md  100-appeal-appellants-notice-n161.md  101-appeal-grounds-of-appeal.md  102-appeal-skeleton-argument.md  103-appeal-permission-to-appeal-application.md  104-supreme-court-permission-application.md  11-contract-template-services.md  110-injunction-without-notice-application.md  111-injunction-freezing-order.md  112-injunction-search-order.md  113-undertaking-in-damages.md  114-interim-injunction-skeleton.md  12-contract-template-employment.md  120-disclosure-review-document-pd-51u.md  121-list-of-documents-form-n265.md  122-privilege-log.md  123-redaction-protocol.md  124-extended-disclosure-categories.md  13-contract-template-nda-confidentiality.md  130-expert-letter-of-instruction.md  131-expert-report-cpr-part-35.md  132-experts-joint-statement.md  133-single-joint-expert-instructions.md  134-expert-cross-examination-protocol.md  14-contract-template-residential-tenancy.md  140-default-judgment-n225-n227.md  141-set-aside-default-judgment-application.md  15-contract-template-commercial-lease.md  150-enforcement-hceo-instructions.md  151-charging-order-application.md  152-third-party-debt-order.md  153-attachment-of-earnings-order.md  154-writ-of-control.md  155-bankruptcy-petition-individual.md  16-contract-template-shareholders-agreement.md  160-skeleton-trial.md  161-skeleton-cmc.md  162-skeleton-directions-hearing.md  (+70 more)
(+138 files in other folders)
